@@ -98,7 +98,7 @@ context "An SQLite database" do
 
     proc {@db.transaction do
       @db.create_table(:v) {text :name}
-      rollback!
+      raise Sequel::Error::Rollback
     end}.should_not raise_error
     # no commit
     @db.tables.should == [:t]
@@ -116,7 +116,7 @@ context "An SQLite database" do
     proc {@db.transaction do
       @db.create_table(:v) {text :name}
       @db.transaction do
-        rollback! # should roll back the top-level transaction
+        raise Sequel::Error::Rollback # should roll back the top-level transaction
       end
     end}.should_not raise_error
     # no commit
