@@ -442,10 +442,10 @@ context "Database#transaction" do
     proc {@db.transaction {raise RuntimeError}}.should raise_error(RuntimeError)
   end
   
-  specify "should issue ROLLBACK if rollback! is called in the transaction" do
+  specify "should issue ROLLBACK if Sequel::Error::Rollback is called in the transaction" do
     @db.transaction do
       @db.drop_table(:a)
-      rollback!
+      raise Sequel::Error::Rollback
       @db.drop_table(:b)
     end
     
