@@ -1,5 +1,7 @@
 === HEAD
 
+* Deprecate Object#rollback! (jeremyevans)
+
 * Make some Dataset methods private (qualified_column_name, column_list, table_ref, source_list) (jeremyevans)
 
 * Deprecate Dataset methods #set_options, #set_row_proc, #remove_row_proc, and #clone_merge (jeremyevans)
